--- a/CMSAPI/.gitignore
+++ b/CMSAPI/.gitignore
@@ -40,6 +40,11 @@ obj\
 obj
 .vs
 
+# SQLite temporary files
+*.db-shm
+*.db-wal
+
+
 # Visual Studio 2015/2017 cache/options directory
 .vs/
 */.vs/**
